all the configs should be lowercase...

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.animenace.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.animenace.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\animenace">
+      <modification name="3dgroovegx\animenace">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
