--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.arcticblast.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.arcticblast.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\arcticblast">
+      <modification name="3dgroovegx\arcticblast">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
