--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.elfs.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.elfs.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\elfs">
+      <modification name="3dgroovegx\elfs">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
