--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.jetixtreme.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.jetixtreme.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\jetixtreme">
+      <modification name="3dgroovegx\jetixtreme">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
