--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.kapahala.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.kapahala.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\kapahala">
+      <modification name="3dgroovegx\kapahala">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
