--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.lisasquest.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.lisasquest.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\lisasquest">
+      <modification name="3dgroovegx\lisasquest">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
