--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.ospace.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.ospace.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\ospace">
+      <modification name="3dgroovegx\ospace">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
