--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.racer.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.racer.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\racer">
+      <modification name="3dgroovegx\racer">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
