--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.war.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.war.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\war">
+      <modification name="3dgroovegx\war">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
