--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.GTA.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.GTA.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\GTA">
+      <modification name="3dgroovegx\GTA">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
