--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.JNJF.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.JNJF.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\JNJF">
+      <modification name="3dgroovegx\JNJF">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
