--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.SBM3D.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.SBM3D.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\SBM3D">
+      <modification name="3dgroovegx\SBM3D">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
