--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.Showdown.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.Showdown.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\Showdown">
+      <modification name="3dgroovegx\Showdown">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
