--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.agukart.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.agukart.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\agukart">
+      <modification name="3dgroovegx\agukart">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
