--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.babyknight.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.babyknight.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\babyknight">
+      <modification name="3dgroovegx\babyknight">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
