--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.battleracer.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.battleracer.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\battleracer">
+      <modification name="3dgroovegx\battleracer">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
