--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.ben10playabledemo.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.ben10playabledemo.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\ben10playabledemo">
+      <modification name="3dgroovegx\ben10playabledemo">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
