--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.dp.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.dp.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\dp">
+      <modification name="3dgroovegx\dp">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
