--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.dunktank.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.dunktank.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\dunktank">
+      <modification name="3dgroovegx\dunktank">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
