--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.gta2.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.gta2.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\gta2">
+      <modification name="3dgroovegx\gta2">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
