--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.hamsterballbowling.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.hamsterballbowling.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\hamsterballbowling">
+      <modification name="3dgroovegx\hamsterballbowling">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
