--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.hive.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.hive.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\hive">
+      <modification name="3dgroovegx\hive">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
