--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.kimpossible.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.kimpossible.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\kimpossible">
+      <modification name="3dgroovegx\kimpossible">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
