--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.penguinracers.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.penguinracers.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\penguinracers">
+      <modification name="3dgroovegx\penguinracers">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
