--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.preyingmantis.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.preyingmantis.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\preyingmantis">
+      <modification name="3dgroovegx\preyingmantis">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
