--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.robotpandemonium.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.robotpandemonium.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\robotpandemonium">
+      <modification name="3dgroovegx\robotpandemonium">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
