--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.truckarena.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.truckarena.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\truckarena">
+      <modification name="3dgroovegx\truckarena">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
