--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.volvocars.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.volvocars.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\volvocars">
+      <modification name="3dgroovegx\volvocars">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
