--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.yinyangyo.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.yinyangyo.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\yinyangyo">
+      <modification name="3dgroovegx\yinyangyo">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
