--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.zoltarsrevenge.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.zoltarsrevenge.config
@@ -6,7 +6,7 @@
 
   <flashpointSecurePlayer>
     <modifications>
-      <modification name="3DGrooveGX\zoltarsrevenge">
+      <modification name="3dgroovegx\zoltarsrevenge">
 	    <modeTemplates>
 		  <softwareModeTemplate>
 			<regexes>
