fix problem backing up

--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Modifications.cs" />
     <Compile Include="ProgressManager.cs" />
     <Compile Include="RunAsAdministrator.cs" />
+    <Compile Include="Shared.cs" />
     <Compile Include="SingleInstance.cs" />
     <Compile Include="ProcessSync.cs" />
     <Compile Include="RegistryBackups.cs" />
