first attempt at adding Old CPU Simulator, and lots of changes to increase stability

--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>FlashpointSecurePlayer.cs</DependentUpon>
     </Compile>
     <Compile Include="Modifications.cs" />
+    <Compile Include="OldCPUSimulator.cs" />
     <Compile Include="ProgressManager.cs" />
     <Compile Include="RunAsAdministrator.cs" />
     <Compile Include="Shared.cs" />
