--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -77,6 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveXControl.cs" />
+    <Compile Include="ClosableWebBrowser.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="CustomSecurityManager.cs" />
     <Compile Include="DownloadsBefore.cs" />
     <Compile Include="InternetInterfaces.cs" />
