--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -80,6 +80,9 @@
     <Compile Include="ClosableWebBrowser.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ClosableWebBrowser.Designer.cs">
+      <DependentUpon>ClosableWebBrowser.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomSecurityManager.cs" />
     <Compile Include="DownloadsBefore.cs" />
     <Compile Include="InternetInterfaces.cs" />
