--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
@@ -12,9 +12,9 @@
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
                         valueName="Company" value="FP" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Path" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR" valueKind="String" />
+                        valueName="Path" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="TempDir" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Temp" valueKind="String" />
+                        valueName="TempDir" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Temp" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0"
                         valueName="" value="Superscape Viscape NavBar Control" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0\FLAGS"
@@ -22,10 +22,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Navbar.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Navbar.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{96D94337-BF1E-11D1-8322-0020AF998C79}"
                         valueName="" value="ISuperscapeViscapeNavBarControl" valueKind="String" />
@@ -52,7 +52,7 @@
                         valueName="" value="Superscape Viscape NavBar Property Page"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{96D94339-BF1E-11D1-8322-0020AF998C79}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Navbar.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Navbar.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B4DCAF60-A77C-11D1-8322-0020AF998C79}"
                         valueName="" value="Superscape Viscape NavBar Control" valueKind="String" />
@@ -64,10 +64,10 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B4DCAF60-A77C-11D1-8322-0020AF998C79}\PROGID"
                         valueName="" value="Superscape Viscape NavBar Control" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B4DCAF60-A77C-11D1-8322-0020AF998C79}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Navbar.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Navbar.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B4DCAF60-A77C-11D1-8322-0020AF998C79}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Navbar.ocx, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Navbar.ocx, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B4DCAF60-A77C-11D1-8322-0020AF998C79}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -89,10 +89,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{1B487520-BEC2-11CF-BF9E-0020AF998FF5}\1.1\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{1B487520-BEC2-11CF-BF9E-0020AF998FF5}\1.1\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Vrtocx.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Vrtocx.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{1B487520-BEC2-11CF-BF9E-0020AF998FF5}\1.1\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1B487523-BEC2-11CF-BF9E-0020AF998FF5}"
                         valueName="" value="Superscape Viscape" valueKind="String" />
@@ -104,10 +104,10 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1B487523-BEC2-11CF-BF9E-0020AF998FF5}\PROGID"
                         valueName="" value="Virtual_Worlds" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1B487523-BEC2-11CF-BF9E-0020AF998FF5}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Vrtocx.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Vrtocx.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1B487523-BEC2-11CF-BF9E-0020AF998FF5}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\Vrtocx.ocx, 201"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Vrtocx.ocx, 201"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1B487523-BEC2-11CF-BF9E-0020AF998FF5}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -139,7 +139,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BBED38A0-72D9-11D0-AB39-0020AF71E433}"
                         valueName="" value="SCL Audio Renderer" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BBED38A0-72D9-11D0-AB39-0020AF71E433}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\SCLAudio.ax"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\SCLAudio.ax"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BBED38A0-72D9-11D0-AB39-0020AF71E433}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Both" valueKind="String" />
@@ -170,7 +170,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64302E60-6AD2-11D0-AB39-0020AF71E433}"
                         valueName="" value="SCL Video Renderer" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64302E60-6AD2-11D0-AB39-0020AF71E433}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\SVR\SCLVideo.ax"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\SCLVideo.ax"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64302E60-6AD2-11D0-AB39-0020AF71E433}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Both" valueKind="String" />
