--- a/FlashpointSecurePlayerConfigurationEditor/FlashpointSecurePlayerConfigurationEditor.csproj
+++ b/FlashpointSecurePlayerConfigurationEditor/FlashpointSecurePlayerConfigurationEditor.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{63F2A5A1-7648-4CF3-900E-DC97AEA5B08B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FlashpointSecurePlayerConfigurationEditor</RootNamespace>
+    <RootNamespace>FlashpointSecurePlayer</RootNamespace>
     <AssemblyName>FlashpointSecurePlayerConfigurationEditor</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
