fix to Pulse config, merge into dev later

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.pulse.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.pulse.config
@@ -7,6 +7,32 @@
         <modifications>
             <modification name="activex\pulse">
                 <registryBackups binaryType="SCS_32BIT_BINARY">
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0"
+                        valueName="" value="AxPulse 1.0 Type Library"
+                        valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\FLAGS"
+                        valueName="" value="0" valueKind="String" />
+                    <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\0"
+                        valueName="" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\0\WIN32"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Pulse\AxPulse.dll"
+                        valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D6016ED9-A8FF-11D1-B37E-A4759ECD7909}\1.0\HELPDIR"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Pulse\"
+                        valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0"
+                        valueName="" value="AxPulse 1.0 Type Library"
+                        valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\FLAGS"
+                        valueName="" value="0" valueKind="String" />
+                    <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\0"
+                        valueName="" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\0\WIN32"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Pulse\AxPulse5.dll"
+                        valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{F1DF76FC-7696-465B-8B29-F2F1E44691D7}\1.0\HELPDIR"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Pulse\"
+                        valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE.1"
                         valueName="" value="AxPulse Class" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\AXPULSE.AXPULSE.1\CLSID"
