--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
@@ -12,9 +12,9 @@
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
                         valueName="Company" value="FP" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Path" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR" valueKind="String" />
+                        valueName="Path" value="SVR" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="TempDir" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\SVR\Temp" valueKind="String" />
+                        valueName="TempDir" value="SVR\Temp" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0"
                         valueName="" value="Superscape Viscape NavBar Control" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0\FLAGS"
