fix for download exceptions not being caught

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.agukart.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.agukart.config
@@ -15,7 +15,7 @@
 		  </softwareModeTemplate>
 		</modeTemplates>
 		<downloadsBefore>
-		  <downloadBefore name="http://www.nickjr.com/games/data/rrgrownup/rrgp_krazykarts/code.grv" />
+		  <downloadBefore name="http://www.nick.com/games/data/rrgrownup/rrgp_krazykarts/code.grv" />
 		</downloadsBefore>
       </modification>
     </modifications>
