--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.dp.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.dp.config
@@ -15,7 +15,7 @@
 		  </softwareModeTemplate>
 		</modeTemplates>
 		<downloadsBefore>
-		  <downloadBefore name="http://www.nickjr.com/games/data/dannyphantom/dp_ghostsweep/code.GRV" />
+		  <downloadBefore name="http://www.nick.com/games/data/dannyphantom/dp_ghostsweep/code.GRV" />
 		</downloadsBefore>
       </modification>
     </modifications>
