fix Viscape not being inlined in some cases

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
@@ -7,14 +7,6 @@
         <modifications>
             <modification name="svr">
                 <registryBackups binaryType="SCS_32BIT_BINARY">
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Name" value="FP" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Company" value="FP" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Path" value="SVR" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="TempDir" value="SVR\Temp" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0"
                         valueName="" value="Superscape Viscape NavBar Control" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0\FLAGS"
@@ -198,6 +190,26 @@
                         valueName="" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64302E60-6AD2-11D0-AB39-0020AF71E433}\PINS\INPUT\TYPES\{73646976-0000-0010-8000-00AA00389B71}"
                         valueName="" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\X-WORLD/X-VRT" valueName="CLSID" value="{1B487523-BEC2-11CF-BF9E-0020AF998FF5}" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\X-WORLD/X-VRT" valueName="EXTENSION" value=".vrt" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\X-WORLD/X-SVR" valueName="CLSID" value="{1B487523-BEC2-11CF-BF9E-0020AF998FF5}" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\X-WORLD/X-SVR" valueName="EXTENSION" value=".svr" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\X-WORLD/X-XVR" valueName="CLSID" value="{1B487523-BEC2-11CF-BF9E-0020AF998FF5}" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\MIME\DATABASE\CONTENT TYPE\X-WORLD/X-XVR" valueName="EXTENSION" value=".xvr" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.VRT" valueName="" value="Virtual_Worlds" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.VRT" valueName="CONTENT TYPE" value="x-world/x-vrt" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.SVR" valueName="" value="Virtual_Worlds" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.SVR" valueName="CONTENT TYPE" value="x-world/x-svr" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="" value="Virtual_Worlds" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="CONTENT TYPE" value="x-world/x-xvr" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+                        valueName="Name" value="FP" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+                        valueName="Company" value="FP" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+                        valueName="Path" value="SVR" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
+                        valueName="TempDir" value="SVR\Temp" valueKind="String" />
                 </registryBackups>
 				<oldCPUSimulator targetRate="200" />
             </modification>
