--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -87,6 +87,7 @@
     <Compile Include="DownloadSource.cs" />
     <Compile Include="DownloadsBefore.cs" />
     <Compile Include="InternetInterfaces.cs" />
+    <Compile Include="Mode.cs" />
     <Compile Include="ModeTemplates.cs" />
     <Compile Include="EnvironmentVariables.cs" />
     <Compile Include="FlashpointSecurePlayer.cs">
