temporary fix for localization issues with Unity and Viscape

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svr.config
@@ -202,14 +202,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.SVR" valueName="CONTENT TYPE" value="x-world/x-svr" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="" value="Virtual_Worlds" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\CLASSES\.XVR" valueName="CONTENT TYPE" value="x-world/x-xvr" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Name" value="FP" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Company" value="FP" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="Path" value="SVR" valueKind="String" />
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Superscape\Superscape Viscape\Preferences"
-                        valueName="TempDir" value="SVR\Temp" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
+                        valueName="NAME" value="FP" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
+                        valueName="COMPANY" value="FP" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
+                        valueName="PATH" value="SVR" valueKind="String" />
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
+                        valueName="TEMPDIR" value="SVR\Temp" valueKind="String" />
                 </registryBackups>
 				<oldCPUSimulator targetRate="200" />
             </modification>
