--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer3scaling.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/unitywebplayer3scaling.config
@@ -18,8 +18,8 @@
 				  </softwareModeTemplate>
 				</modeTemplates>
                 <registryBackups binaryType="SCS_32BIT_BINARY">
-                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\Software\Unity\WebPlayer"
-                        valueName="Directory" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\UnityWebPlayer\Unity3d3.x"
+                    <registryBackup type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\UNITY\WEBPLAYER"
+                        valueName="DIRECTORY" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\UnityWebPlayer\Unity3d3.x"
                         valueKind="String" />
                 </registryBackups>
 				<singleInstance strict="false" commandLine="basilisk.exe" />
