updated packages, updating configurations to work with new model

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dgroovegx.config
@@ -5,20 +5,11 @@
   </configSections>
 
   <flashpointSecurePlayer>
-    <modifications>
-      <modification name="3dgroovegx\obanstarracers">
-	    <modeTemplates>
-		  <softwareModeTemplate>
-			<regexes>
-			  <regex name="^" replace="3DGrooveGX\GroovePlayer.exe" />
-			</regexes>
-		  </softwareModeTemplate>
-		</modeTemplates>
-		<downloadsBefore>
-		  <downloadBefore name="http://tv.disney.go.com/jetix/obanstarracers/games/greatrace/CODE.GRV" />
-		</downloadsBefore>
-      </modification>
-    </modifications>
+    <templates>
+      <template name="3dgroovegx">
+	    <mode name="SOFTWARE" commandLine="3DGrooveGX\GroovePlayer.exe" />
+      </template>
+    </templates>
   </flashpointSecurePlayer>
   <startup>
     
