I don't even know

--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/shiva3d.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/shiva3d.config
@@ -10,7 +10,7 @@
 				<modifications>
 					<environmentVariables>
 					  <environmentVariable name="__COMPAT_LAYER" value="HIGHDPIAWARE" />
-					  <environmentVariable find="http://" replace="http://localhost:22500/" />
+					  <environmentVariable name="FP_URL" find="http://" replace="http://localhost:22500/" />
 					</environmentVariables>
 				</modifications>
 			</template>
